default/objects/Credit_Check_Report_Employee__c/Credit_Check_Report_Employee__c.object-meta.xml
<CustomObject>
    <label>Credit Check Report Employee</label>
    <nameField>
        <label>Credit Check Report Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Check Report Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>