default/objects/Credit_Check_Report_Employee__c/fields/Credit_Check_Report__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check_Report__c</fullName>
    <label>Credit Check Report</label>
    <referenceTo>Credit_Check_Report__c</referenceTo>
    <relationshipLabel>Credit Check Report Employees</relationshipLabel>
    <relationshipName>Credit_Check_Report_Employees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>