default/objects/Credit_Check_Report_Employee__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>