default/objects/Credit_Check_Report_Employee__c/fields/Participation_Date__c.field-meta.xml
<CustomField>
    <fullName>Participation_Date__c</fullName>
    <label>Participation Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>